--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "classnames": "^2.3.1",
+    "date-fns": "^2.23.0",
     "gray-matter": "^4.0.3",
     "next": "11.0.1",
     "react": "17.0.2",
